Fix overflow of intro background

--- a/css/main.styl
+++ b/css/main.styl
@@ -85,8 +85,8 @@ body {
 /***TRANSITIONS***/
 @keyframes fade-out {
 	0%   {}
-  15%   {background: #fff;}
-  100% {background: #fff;}
+  15%   {opacity: 0;}
+  100% {opcity: 0;}
 }
 
 .fade-out {
