--- a/css/stylus/nav.styl
+++ b/css/stylus/nav.styl
@@ -45,7 +45,7 @@ header {
 @media (min-width: 768px) {
 	header {
 		padding: 10px;
-		z-index: 0;
+		width: auto;
 		
 		#logo {
 			display: block;
